refactored issues and aligned some components

--- a/src/App.css
+++ b/src/App.css
@@ -44,4 +44,24 @@
   width: 10px;
   height: 10px;
   border-radius: 2px;
+  margin-bottom: 2px
+}
+
+
+.markdown-body {
+  max-width: 100%;
+  overflow-x: auto;
+  word-wrap: break-word;
+}
+
+.markdown-body img {
+  max-width: 100%;
+  /* max-height: 100%; */
+  height: auto;
+  /* height: auto; */
+}
+
+.buttoff{
+  background-color: #212830;
+  border: 1px solid #212830;
 }
